# FutsalMOT_Dataset

./: .gitignore  00_run_pipeline.py  01_generate_trajectories.py  02_run_unreal.py  03_check_labels.py  10_validate_episode.py  11_generate_random_episode.py  12_compile_trajectory.py  13_enhance_trajectory.py  14_validate_trajectory.py  15_smooth_trajectory.py  20_build_sequences.py  21_preflight.py  22_scan_animations.py  23_ue_setup_8_players.py  30_convert_and_check.py  31_generate_event_annotations.py  8PLAYER_DEVELOPMENT_REPORT.md  ARCHITECTURE.md  FINAL_ACCEPTANCE_REPORT.md  FutsalMOT_RL_Independent_Pipeline_Plan.md  FutsalMOT_RL_Next_Workplan.md  LOCAL_CODE_REVIEW_REPORT.md  LOCAL_RUN_REPORT.md  PROJECT_SUMMARY.md  README.md  README_FutsalMOT_RL.md  REFACTOR_REPORT.md  RUN_PIPELINE.md  TEST_RESULTS_8PLAYERS.json  UE_LOCAL_STEPS.md  pyproject.toml  rl_01_export_demos.py  rl_01b_check_demos.py  rl_03_env_sanity_check.py  rl_04_train_ppo.py  rl_07_validate_ue_closed_loop.py  rl_07b_ue_render_rl.py  rl_07c_check_rl_render.py  rl_07d_verify_rl_render.py  (+4 more)
.github/workflows/: ci.yml
configs/: action_animation_map.json  local_paths.example.json  pipeline_config.json  pipeline_current.example.json  pipeline_current.json  seq_test_0003.json  seq_test_0004.json  seq_test_0005.json
configs/events/: episode_test_0001.json
futsalmot/: README.md  __init__.py
futsalmot/core/: __init__.py  hashing.py  io.py  paths.py  process.py
futsalmot_rl/: __init__.py  cli.py
scripts/: local_check.ps1  local_rl_smoke.ps1  train_bc.py  train_ppo.py
tests/: conftest.py
(+86 files in other folders)
