[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "futsalmot"
version = "0.2.0"
description = "FutsalMOT Unreal Engine synthetic dataset generation and RL training pipeline"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "numpy>=1.26",
]

[project.optional-dependencies]
rl = [
    "torch>=2.2",
    "gymnasium>=0.29",
    "imageio>=2.33",
    "imageio-ffmpeg>=0.5",
]
viz = [
    "matplotlib>=3.8",
    "opencv-python>=4.8",
]
dev = [
    "pytest>=8",
    "pytest-cov>=5",
    "ruff>=0.6",
    "mypy>=1.11",
]

[project.scripts]
futsalmot-rl = "futsalmot_rl.cli:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-ra --strict-markers"

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM", "RUF"]

[tool.hatch.build.targets.wheel]
packages = [
    "futsalmot",
    "futsalmot_rl",
]

[tool.hatch.build.targets.sdist]
exclude = [
    ".github/",
    "tests/",
    "tools/",
]

[tool.mypy]
python_version = "3.10"
warn_unused_ignores = true
